[package]
name = "debugid"
version = "0.1.0"
license = "Apache-2.0"
description = "Common reusable types for implementing the sentry.io protocol."
homepage = "https://sentry.io/"
repository = "https://github.com/getsentry/rust-debugid"
documentation = "https://docs.rs/debugid"
keywords = ["sentry", "debugid", "breakpad", "crashpad"]
readme = "README.md"
authors = ["Sentry <hello@sentry.io>"]

[dependencies]
uuid = "0.6.2"
regex = "0.2.10"
lazy_static = "1.0.0"
serde = { version = "1.0.33", optional = true }
serde_plain = { version = "0.3.0", optional = true }

[features]
default = []
with_serde = ["serde", "serde_plain"]
