[package]
name = "debugid"
version = "0.1.0"
license = "Apache-2.0"
description = "Common reusable types for implementing the sentry.io protocol."
homepage = "https://sentry.io/"
repository = "https://github.com/getsentry/rust-debugid"
documentation = "https://docs.rs/debugid"
keywords = ["sentry", "debugid", "breakpad", "crashpad"]
readme = "README.md"
authors = ["Sentry <hello@sentry.io>"]

[features]
default = []
with_serde = ["serde"]

[dependencies]
uuid = "0.6.2"
regex = "0.2.10"
lazy_static = "1.0.0"
serde = { version = "1.0.36", optional = true }

[dev-dependencies]
serde_json = "1.0.16"
